--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.0"
+    "react-web-tabs": "^0.4.3",
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,7 +17,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "./",
   "devDependencies": {
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2"
